# embpy

./: .cruft.json  .gitignore  LICENSE  README.md  embed_job.sbatch  environment-cpu.yml  environment.yml  pyproject.toml  run_embeddings_generator.sbatch  run_embeddings_generator_dna_models.sbatch  run_embeddings_generator_protein_models.sbatch  run_generation.py  run_generation_molformer.py
.github/ISSUE_TEMPLATE/: feature_request.yml
.github/workflows/: release.yaml
benchmark/: benchmark_notebook.ipynb
docs/: Embpy_Presentation.pptx  api.md  conf.py  contributing.md
docs/notebooks/: 02_gene_embeddings.ipynb  04_molecule_embeddings.ipynb  05_text_embeddings.ipynb  06_ppi_embeddings.ipynb  11_depmap_analysis.ipynb  12_singlecell_foundation_models.ipynb  13_jump_cell_painting.ipynb  14_unified_embedding.ipynb  17_cross_species_embeddings.ipynb  18_text_knowledge_embeddings.ipynb  19_boltz2_structure_embeddings.ipynb  20_cellline_context.ipynb  benchmark_notebook.ipynb  example.ipynb
docs/tutorials/: 01_identifiers_and_preprocessing.ipynb  03_protein_embeddings.ipynb  04_molecule_embeddings.ipynb  06_ppi_embeddings.ipynb  07_combined_analysis.ipynb  07_ppi_embeddings.ipynb  08_visualization_and_analysis.ipynb  09_embedding_benchmark.ipynb
docs/tutorials_core_tools/: 02_gene_embeddings.ipynb  03_protein_embeddings.ipynb  04_molecule_embeddings.ipynb  06_ppi_embeddings.ipynb  10_dna_embeddings.ipynb  11_depmap_analysis.ipynb  12_singlecell_foundation_models.ipynb  13_jump_cell_painting.ipynb  15_molecule_annotation.ipynb  16_gene_protein_annotation.ipynb
docs/tutorials_per_dataset/: replogle_benchmark.ipynb
embpy/: __init__.py
embpy/resources/: __init__.py
err/: embpy_gen_error_26631607.txt  embpy_gen_output_26631607.txt
logs/: esmc_genome_31896025.err  esmc_genome_31896029.err  esmc_genome_31896029.out  esmc_genome_31896045.err  esmc_genome_31896045.out
scripts/: upload_to_hf.py
src/embpy/: __init__.py  embedder.py  errors.py  gene_embeddings.py
src/embpy/dt/: __init__.py
src/embpy/models/: __init__.py  api_models.py  base.py  dna_models.py  molecule_models.py  morphology_models.py  ppi_models.py  protein_models.py  singlecell_models.py  structure_models.py  text_models.py
src/embpy/models/dna_models/: enformer.py
src/embpy/pl/: __init__.py  _helpers.py  basic.py  benchmark.py  clustering.py  comparisons.py  distributions.py  embedding_space.py  heatmaps.py
src/embpy/pp/: __init__.py  basic.py  depmap_handler.py  hf_handler.py  lamin_handler.py  sc_preprocessing.py
src/embpy/resources/: __init__.py  cellline_annotator.py  drug_resolver.py  gene_annotator.py  gene_resolver.py  molecule_annotator.py  protein_annotator.py  protein_resolver.py  text_resolver.py
src/embpy/tl/: __init__.py  basic.py  benchmark.py  clustering.py  dimred.py  metadata.py  metrics.py  pipeline.py  similarity.py  snp_utils.py  weighted_protein_embedding.py
submission_scripts/: borzoi_embed.py  download_sequences.py  embed_full_genome.py  embed_full_proteome.py  embed_genes.py  embed_proteins.py  enformer_embed.py  esmc_embed.py  extract_gene_regions.py  run_all_dna_embeddings.sbatch  run_download_sequences.sbatch  run_full_genome_embeddings.sbatch  run_gene_embedding.sbatch  run_protein_embedding.sbatch  run_protein_embeddings_array.sbatch  run_small_molecule_embedding.sbatch
submission_scripts/dna/: embed_full_genome.py  run_full_genome_embeddings.sbatch  submit_genome_embeddings.sh
submission_scripts/logs/: genome_emb_34862677_0.err  genome_emb_34862677_0.out  genome_emb_34862677_1.err  genome_emb_34862677_1.out  genome_emb_34862677_10.err  genome_emb_34862677_10.out  genome_emb_34862677_11.err  genome_emb_34862677_11.out  genome_emb_34862677_12.err  genome_emb_34862677_12.out  genome_emb_34862677_13.err  genome_emb_34862677_13.out  genome_emb_34862677_14.err  genome_emb_34862677_14.out  genome_emb_34862677_15.err  genome_emb_34862677_15.out  genome_emb_34862677_16.err  genome_emb_34862677_16.out  genome_emb_34862677_17.err  genome_emb_34862677_17.out  genome_emb_34862677_18.err  genome_emb_34862677_18.out  genome_emb_34862677_19.err  genome_emb_34862677_19.out  genome_emb_34862677_2.err  genome_emb_34862677_2.out  genome_emb_34862677_20.err  genome_emb_34862677_20.out  genome_emb_34862677_21.err  genome_emb_34862677_21.out  genome_emb_34862677_22.err  genome_emb_34862677_22.out  genome_emb_34862677_23.err  genome_emb_34862677_23.out  genome_emb_34862677_24.err  genome_emb_34862677_24.out  genome_emb_34862677_25.err  genome_emb_34862677_25.out  genome_emb_34862677_26.err  genome_emb_34862677_26.out  (+72 more)
submission_scripts/molecule/: embed_small_molecule.py  run_small_molecule_embedding.sbatch
submission_scripts/protein/: embed_full_proteome.py  run_protein_embeddings_array.sbatch
submission_scripts/utility/: upload_embeddings_to_hf.py
tests/: conftest.py  test_basic.py  test_benchmark.py  test_borzoi_wrapper.py  test_cellline_annotator.py  test_drug_resolver.py  test_embedder.py  test_embedder_text.py  test_enformer_wrapper.py  test_errors.py  test_esmc_wrapper.py  test_gene_annotator.py  test_gene_regions.py  test_gene_resolver.py  test_hf_handler.py  test_local_genome.py  test_metadata.py  test_metrics.py  test_molecule_annotator.py  test_multi_species.py  test_pl_comparisons.py  test_plotting.py  test_pp_basic.py  test_ppi_models.py  test_protein_annotator.py  test_protein_resolver.py  test_sc_preprocessing.py  test_snp_utils.py  test_strings_wrapper.py  test_text_resolver.py  test_weighted_protein_embedding.py
tests/models/: conftest.py  test_api_models.py  test_base.py  test_dna_models.py  test_molecule_models.py  test_morphology_models.py  test_ppi_models.py  test_protein_models.py  test_singlecell_models.py  test_structure_models.py  test_text_models.py
tests/tests_model/: test_basic.py  test_chemberta_wrapper.py  test_esm2_wrapper.py  test_esmc_wrapper.py  test_llm_wrapper.py  test_molformer_wrapper.py
tests/tests_user_api/: test_gene_resolver.py
tests/tl/: test_dimred_clustering.py  test_similarity.py
(+2 files in other folders)
