[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling" ]

[project]
name = "embpy"
version = "0.0.1"
description = "A package for biological embeddings in the perturbation experimental space"
readme = "README.md"
license = { file = "LICENSE" }
maintainers = [
  { name = "Goncalo Rei Pinto", email = "goncalo.pinto@helmholtz-munich.de" },
]
authors = [
  { name = "Goncalo Rei Pinto" },
]
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "anndata",
  "biopython",
  "borzoi-pytorch>=0.4.3",
  "enformer-pytorch>=0.8.10",
  "esm>=3.2.0",
  "huggingface-hub>=0.35,<1.0.0",
  "ipywidgets",
  "matplotlib",
  "numpy>=1.26,<2.0",
  "pandas>=2.3.0",
  "pyarrow>=14.0.2",
  "pyensembl>=2.3.13",
  "rdkit",
  "requests",
  "scikit-learn>=1.3",
  "scipy>=1.11",
  "seaborn",
  "session-info",
  "transformers>=4.45.0,<5.0.0",
]

optional-dependencies.torch = [
  "torch>=2.5.1",
]
optional-dependencies.evo = [
  "evo-model>=0.3",
]
optional-dependencies.evo2 = [
  "evo2",
]
optional-dependencies.ppi = [
  "embpy[torch]",
  "torch-geometric>=2.5",
]
optional-dependencies.all = [
  "embpy[torch,evo,evo2,ppi]",
]
optional-dependencies.dev = [
  "pre-commit",
  "twine>=6.1",
]
optional-dependencies.doc = [
  "docutils>=0.8,!=0.18.*,!=0.19.*",
  "ipykernel",
  "ipython",
  "myst-nb>=1.1",
  "setuptools",
  "sphinx>=4",
  "sphinx-autodoc-typehints",
  "sphinx-book-theme>=1",
  "sphinx-copybutton",
  "sphinx-tabs",
  "sphinxcontrib-bibtex>=1",
  "sphinxext-opengraph",
]
optional-dependencies.test = [
  "coverage",
  "pytest",
  "pytest-mock",
]

# https://docs.pypi.org/project_metadata/#project-urls
urls.Documentation = "https://embpy.readthedocs.io/"
urls.Homepage = "https://github.com/grpinto/embpy"
urls.Source = "https://github.com/grpinto/embpy"

[tool.hatch.envs.default]
installer = "uv"
features = [ "dev" ]

[tool.hatch.envs.docs]
features = [ "doc" ]
scripts.build = "sphinx-build -M html docs docs/_build {args}"
scripts.open = "python -m webbrowser -t docs/_build/html/index.html"
scripts.clean = "git clean -fdX -- {args:docs}"

[tool.hatch.envs.hatch-test]
features = [ "test" ]

[tool.ruff]
line-length = 120
src = [ "src" ]
extend-include = [ "*.ipynb" ]

format.docstring-code-format = true

lint.select = [
  "B",      # flake8-bugbear
  "BLE",    # flake8-blind-except
  "C4",     # flake8-comprehensions
  "D",      # pydocstyle
  "E",      # Error detected by Pycodestyle
  "F",      # Errors detected by Pyflakes
  "I",      # isort
  "RUF100", # Report unused noqa directives
  "TID",    # flake8-tidy-imports
  "UP",     # pyupgrade
  "W",      # Warning detected by Pycodestyle
]
lint.ignore = [
  "B008", # Errors from function calls in argument defaults. These are fine when the result is immutable.
  "D100", # Missing docstring in public module
  "D104", # Missing docstring in public package
  "D105", # __magic__ methods are often self-explanatory, allow missing docstrings
  "D107", # Missing docstring in __init__
  # Disable one in each pair of mutually incompatible rules
  "D203", # We don't want a blank line before a class docstring
  "D213", # <> We want docstrings to start immediately after the opening triple quote
  "D400", # first line should end with a period [Bug: doesn't work with single-line docstrings]
  "D401", # First line should be in imperative mood; try rephrasing
  "E501", # line too long -> we accept long comment lines; formatter gets rid of long code lines
  "E731", # Do not assign a lambda expression, use a def -> lambda expression assignments are convenient
  "E741", # allow I, O, l as variable names -> I is the identity matrix
]
lint.per-file-ignores."*/__init__.py" = [ "F401" ]
lint.per-file-ignores."docs/*" = [ "I" ]
lint.per-file-ignores."tests/*" = [ "D" ]
lint.pydocstyle.convention = "numpy"

[tool.pytest.ini_options]
testpaths = [ "tests" ]
xfail_strict = true
addopts = [
  "--import-mode=importlib",
]

[tool.coverage.run]
source = [ "embpy" ]
omit = [
  "**/test_*.py",
]

[tool.cruft]
skip = [
  "tests",
  "src/**/__init__.py",
  "src/**/basic.py",
  "docs/api.md",
  "docs/changelog.md",
  "docs/references.bib",
  "docs/references.md",
  "docs/notebooks/example.ipynb",
]
